--- a/.kitchen/nexus-ubuntu-xenial64.yml
+++ b/.kitchen/nexus-ubuntu-xenial64.yml
@@ -2,6 +2,6 @@
 hostname: 127.0.0.1
 port: '2222'
 username: vagrant
-ssh_key: "/Users/kerwin/Documents/jenkins-maven/cookbooks/nexus/.kitchen/kitchen-vagrant/nexus-ubuntu-xenial64/.vagrant/machines/default/virtualbox/private_key"
+ssh_key: "/Users/kerwin/Documents/github.com/interview-project/nexus/.kitchen/kitchen-vagrant/nexus-ubuntu-xenial64/.vagrant/machines/default/virtualbox/private_key"
 last_action: converge
 last_error: 
